[package]
name = "ukf"
version = "0.1.2"
authors = ["David Taylor <david.baker.taylor@gmail.com>"]
edition = "2018"
description = "unscented Kalman filter"
license = "MIT"

[dependencies]
nalgebra = "0.21.0"
generic-array = "0.14.1"
typenum = "1.12.0"
thiserror = "1.0.19"
fehler = "1.0.0"

[dev-dependencies]
kf = "0.1.3"